welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: type yellow is not a member of object java.awt.Color
setCouleurCorps(c:Color.yellow)
                        ^